# rat-code

./: AGENT.md  Cargo.toml  LICENSE  README.md
src/: app.rs  claude.rs  main.rs  ui.rs
