[package]
name = "rat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
pulldown-cmark = "0.13"
rig-core = "0.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
